# .claude

./: .gitignore  CLAUDE.md  DECISIONS.md  PATTERN.md  README.md  TOOLS.md  The Surprising Art of Crafting a CLAUDE.md  collaboration-framework.md
.claude-plugin/: marketplace.json
.rules/: 00-index.md  01-repo-structure.md  02-tech-stack.md  03-testing.md  04-commit-pr-process.md  05-code-style-conventions.md  06-react-conventions.md  07-documentation-guidelines.md  08-code-review.md  09-development-conventions.md  10-error-handling-logging.md  (+3 more)
commands/: commit.md  (+26 more)
plugins/web/skills/audit/cli/: pyproject.toml
plugins/web/skills/audit/cli/audit_cli/: __init__.py  __main__.py  action_log.py  cli.py  types.py
plugins/web/skills/audit/cli/audit_cli/crawl/: __init__.py  page.py  queue.py
plugins/web/skills/audit/cli/audit_cli/discover/: __init__.py  interactions.py  routes.py  sitemap.py
plugins/web/skills/audit/cli/audit_cli/drive/: __init__.py  browser.py  inject.py
plugins/web/skills/audit/cli/audit_cli/report/: __init__.py  aggregate.py  emit.py  flag_ai.py
plugins/web/skills/audit/cli/tests/: conftest.py  test_action_log.py  test_aggregate_score_parity.py  test_browser_batch_errors.py  test_browser_cdp_url.py  test_cli_cdp_url.py  test_cli_findings.py  test_discover_interactions.py  test_discover_routes.py  test_emit.py  test_flag_ai.py  test_page_audit.py
plugins/web/skills/audit/cli/tests/fixtures/: ax_snapshot_dup_buttons.json  ax_snapshot_with_social.json  findings_sample.json
plugins/web/skills/audit/cli/tests/fixtures/nextjs_tree/: package.json
(+1709 files in other folders)
