[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "audit-cli"
version = "0.1.0"
description = "Site-crawl orchestrator for the web:audit skill"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "mypy>=1.10",
]

[project.scripts]
audit-cli = "audit_cli.cli:main"

[tool.setuptools.packages.find]
include = ["audit_cli*"]

[tool.mypy]
strict = true
python_version = "3.10"
warn_unused_ignores = true
disallow_any_generics = true
disallow_untyped_defs = true
no_implicit_optional = true
